# mdbookshelf

./: .pre-commit-config.yaml  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: release.yaml  tests.yml
docker/: Dockerfile.x86_64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-musl  openssl.sh
src/: book.rs  config.rs  git.rs  lib.rs  main.rs  tests.rs
tests/: integration_tests.rs
tests/dummy/src/: chapter_1.md
tests/templates/: books.md
