[package]
name = "mdbookshelf"
version = "0.2.0"
authors = ["Ramses Ladlani <rladlani@gmail.com>"]
description = "Create epubs from a list of mdbook repositories"
documentation = "https://docs.rs/mdbookshelf/"
repository = "https://github.com/rams3s/mdbookshelf"
keywords = ["epub", "ebook", "mdbook", "rustbook"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4.6"
clap = "4.0"
color-backtrace = "0.5"
env_logger = "0.10"
git2 = "0.15"
log = "0.4"
mdbook = "0.4"
mdbook-epub = { git = "https://github.com/dieterplex/mdbook-epub", rev = "81b1e718" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
toml = "0.5.0"
url = "2.3"
walkdir = "2.2"
