[package]
name = "mdbookshelf"
version = "0.3.0"
authors = ["Ramses Ladlani <rladlani@gmail.com>"]
description = "Create epubs from a list of mdbook repositories"
documentation = "https://docs.rs/mdbookshelf/"
repository = "https://github.com/rams3s/mdbookshelf"
keywords = ["epub", "ebook", "mdbook", "rustbook"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4.6"
clap = "4.0"
color-backtrace = "0.5"
env_logger = "0.10"
git2 = "0.15"
log = "0.4"
mdbook = "0.4"
mdbook-epub = { git = "https://github.com/dieterplex/mdbook-epub", rev = "3bf63cf9" }
mockall_double = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
temp-env = "0.3"
tera = "1"
toml = "0.5.0"
url = "2.3"
walkdir = "2.2"

[dev-dependencies]
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
mockall = "0.11.3"
predicates = "2.1.5"
tempfile = "3.3.0"
