[package]
name = "mdbookshelf"
version = "0.4.1"
authors = ["Ramses Ladlani <rladlani@gmail.com>"]
description = "Create epubs from a list of mdbook repositories"
documentation = "https://docs.rs/mdbookshelf/"
repository = "https://github.com/rams3s/mdbookshelf"
keywords = ["epub", "ebook", "mdbook", "rustbook"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4.6"
clap = "4.5"
color-backtrace = "0.7.0"
env_logger = "0.11"
git2 = "0.20.1"
log = "0.4"
mdbook = "0.4.47"
mdbook-epub = { git = "https://github.com/dieterplex/mdbook-epub", tag = "v0.5.1" }
mockall_double = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
temp-env = "0.3"
tera = "1.20"
toml = "0.5.0"
url = "2.5.4"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
mockall = "0.13.1"
predicates = "3.1.3"
tempfile = "3.19.1"
